fix layers (z-index) for shootings show carousel next/prev

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
 .my-header {
   position: relative;
   display: flex;
+  z-index: 3;
   justify-content: space-between;
   margin-bottom: -13px;
   font-family: $nav-font;
